<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">self-education</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="close">Close</string>
</resources>
